# Mycobot_280jn_gazebo

./: README.md
mycobot_ros2/mycobot_description/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_description/launch/: mycobot_280_jn.launch.py
mycobot_ros2/mycobot_description/meshes/mycobot_280/: camera_flange.dae
mycobot_ros2/mycobot_description/rviz/: mycobot_280_view.rviz
mycobot_ros2/mycobot_description/urdf/: mycobot_280_urdf.xacro
mycobot_ros2/mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_gazebo/launch/: mycobot_280_jn_bringup.launch.py  mycobotjn_control.launch.py
mycobot_ros2/mycobot_gazebo/src/: example_joint_trajectory_publisher.cpp
mycobot_ros2/mycobot_gazebo/urdf/: mycobot_280_jn.urdf.xacro
mycobot_ros2/mycobot_gazebo/urdf/ros2_control/classic_gazebo/: mycobot_280.urdf.xacro  mycobot_280_classic_gazebo.xacro  mycobot_280_ros2_control.xacro
